# WellBegun

./: .gitignore  launch.sh  pyproject.toml
code_analysis/: 00b9a6b2-a890-48df-bc61-b4ac56941a33.json  0569aef7-ebd5-453e-a627-f78101f5df8f.json  66ccf9e1-88f2-4ce3-acf6-1a3bbfdce840.json  695b1c9c-425d-4289-98de-f71812aa7b72.json  7a6aba25-d569-4dc3-9cb7-6938483c668b.json  900e8480-add9-4b33-b9aa-40b2d855b18e.json  development_history.json  latest.json
data/scaffolding/: templates.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/code_analysis/: 1e936641-1bdc-483a-94f6-79f1dd1ba87d.json  40452356-0cf6-47f2-9c52-1eaccfde3e6a.json  595ed646-9f3a-4484-85eb-0d774027860e.json  6ae41930-f243-4238-a0f4-5aafa917e5ae.json  849e4272-6e71-4327-a2ef-59055201f68b.json  aaca4ce0-fff9-4bdc-acab-4d607a5a14ce.json  ac992890-9566-4f9b-b22d-48257b8cf2c3.json  aedd0dd5-7168-47f5-8fd3-0278e7b323ec.json  development_history.json  ec98979d-6e9e-4774-ade4-fcc199741d27.json  f0c812be-0ebb-4e0f-9010-6c260e442fef.json  f560470f-b67a-4cdc-9084-98b8898f9aab.json  f64ccd07-7b42-4627-96cb-3e226e0ac1a1.json
frontend/src/: app.css  app.html
frontend/static/: WellBegun.icns
learning_materials_wellbegun/: assessment.json  assessment.md  manifest.json
learning_materials_wellbegun/code_analysis/: development_history.json  latest.json
learning_materials_wellbegun/courses/: api-design.json  api-design.md  client-server-architecture.json  client-server-architecture.md  crud-operations.json  (+29 more)
lesson_learned/: obsidian_comparison_and_workspace_editor.md  workspace-design.md
(+292 files in other folders)
